--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -48,7 +48,7 @@
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">Alex Smith</h1>
+      <h1 class="sitename">Arjun Ghimire</h1>
     </a>
 
     <div class="social-links text-center">
@@ -157,10 +157,10 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Photography and Videographer</li>
+                <li><strong>Client</strong>: Neeldavid</li>
+                <li><strong>Project date</strong>: 01 March, 2024</li>
+                <li><strong>Project URL</strong>: <a href="#">www.neeldavid34@gmail.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
