--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p> I am Arjun Ghimire,a well known photographer and videographer of Biratnagar,Nepal. This is my portfolio which includes my details...,project that I have worked in...,and my experience also.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -121,14 +121,14 @@
           <div class="col-lg-8 content">
             <h2>Videographer &amp; Photographer.</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+             Hi i am Arjun , i am a photographer and also a videographer, i have been working on this field since last 5 years.<br>
+             Here are some details about me and my contacts.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>2004/06/15</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.arjunghimire123@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>arjun.videography.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>9827394502</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Biratnagar morang,Nepal</span></li>
                 </ul>
