--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <div class="col-lg-8 content">
             <h2>Videographer &amp; Photographer.</h2>
             <p class="fst-italic py-3">
-             Hi i am Arjun , i am a photographer and also a videographer, i have been working on this field since last 5 years.<br>
+             I am a photographer and also a videographer, I have been working on this field since last 5 years.<br>
              Here are some details about me and my contacts.
             </p>
             <div class="row">
